Adds CRUD API's for Courses with swagger update
