# models/Course.model.js
@@ -1,0 +1,43 @@
+const mongoose = require('mongoose');
+
+const CourseSchema = new mongoose.Schema({
+  title: {
+    type: String,
+    required: [true, 'Please add a course title'],
+    trim: true,
+    maxlength: [50, 'Title cannot be more than 50 characters'],
+  },
+  description: {
+    type: String,
+    required: [true, 'Please add a description'],
+    maxlength: [500, 'Description cannot be more than 500 characters'],
+  },
+  weeks: {
+    type: Number,
+    required: [true, 'Please add a number of weeks'],
+  },
+  tuition: {
+    type: Number,
+    required: [true, 'Please add a tuition cost'],
+  },
+  minimumSkill: {
+    type: String,
+    required: [true, 'Please add a minimum skill'],
+    enum: ['beginner', 'intermediate', 'advanced'],
+  },
+  scholarhipsAvailable: {
+    type: Boolean,
+    default: false,
+  },
+  createdAt: {
+    type: Date,
+    default: Date.now,
+  },
+  bootcamp: {
+    type: mongoose.Schema.ObjectId,
+    ref: 'Bootcamp',
+    required: true,
+  },
+});
+
+module.exports = mongoose.model('Course', CourseSchema);
